--- a/buyer-interaction.html
+++ b/buyer-interaction.html
@@ -102,7 +102,7 @@
           <th># Documents Acknowledged</th>
           <th>Preferred Viewing Time</th>
           <th>Additional Notes</th>
-          <th>Respond to Queries</th>
+          <th>View/Respond to Queries</th>
           <th>Initiate Sale Process</th>
         </tr>
       </thead>
@@ -119,7 +119,7 @@
             <button class="action-btn" onclick="alert('View/Respond to Queries for John Doe')">View/Respond</button>
           </td>
           <td>
-            <button class="action-btn" onclick="alert('Initiate Sale Process for John Doe')">Initiate Sale</button>
+            <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
           </td>
         </tr>
         <tr>
@@ -133,7 +133,7 @@
             <button class="action-btn" onclick="alert('View/Respond to Queries for Jane Smith')">View/Respond</button>
           </td>
           <td>
-            <button class="action-btn" onclick="alert('Initiate Sale Process for Jane Smith')">Initiate Sale</button>
+            <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
           </td>
         </tr>
         <tr>
@@ -147,7 +147,7 @@
             <button class="action-btn" onclick="alert('View/Respond to Queries for Alex Johnson')">View/Respond</button>
           </td>
           <td>
-            <button class="action-btn" onclick="alert('Initiate Sale Process for Alex Johnson')">Initiate Sale</button>
+            <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
           </td>
         </tr>
       </tbody>
