--- a/sale-process.html
+++ b/sale-process.html
@@ -3,15 +3,101 @@
 <head>
   <meta charset="UTF-8">
   <title>Sale Process - Truva</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0; }
-    .container { width: 80%; margin: 20px auto; }
-    header { background: #333; color: #fff; padding: 20px; text-align: center; }
-    .progress { text-align: center; margin-bottom: 20px; font-weight: bold; }
-    .progress span { margin: 0 10px; }
-    form { background: #fff; padding: 20px; border-radius: 5px; }
-    input[type="text"], input[type="number"], textarea { width: 100%; padding: 8px; margin: 10px 0; border: 1px solid #ccc; border-radius: 4px; }
-    input[type="submit"] { padding: 10px 20px; background: #333; color: #fff; border: none; border-radius: 4px; cursor: pointer; }
+    * { box-sizing: border-box; }
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: #f7f9fc;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    header {
+      background: #0052cc;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.8em;
+      font-weight: 500;
+    }
+    .container {
+      max-width: 700px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 30px 40px;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    .progress {
+      text-align: center;
+      margin-bottom: 30px;
+      font-weight: 500;
+      color: #0052cc;
+    }
+    .progress span {
+      margin: 0 8px;
+    }
+    form label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: 500;
+      color: #555;
+    }
+    form input[type="text"],
+    form input[type="number"],
+    form input[type="date"],
+    form textarea {
+      width: 100%;
+      padding: 10px 12px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1em;
+    }
+    form textarea {
+      resize: vertical;
+      min-height: 60px;
+    }
+    form input[type="submit"] {
+      width: 100%;
+      padding: 12px;
+      background: #0052cc;
+      border: none;
+      border-radius: 4px;
+      color: #fff;
+      font-size: 1.1em;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    form input[type="submit"]:hover {
+      background: #003d99;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+    .step-title {
+      font-weight: bold;
+      margin-top: 15px;
+    }
+    .instruction {
+      margin-left: 20px;
+      font-size: 0.95em;
+      color: #555;
+    }
+    @media (max-width: 700px) {
+      .container {
+        margin: 20px;
+        padding: 20px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -20,29 +106,64 @@
   </header>
   <div class="container">
     <div class="progress">
-      <span style="color: green;">Seller Onboarding</span> → <span style="color: green;">Property Onboarding</span> → <span style="color: green;">Staging</span> → <span style="color: green;">Buyer Interactions</span> → <span style="color: blue;">Sale Process</span>
+      <span style="color: green;">Seller Onboarding</span> → 
+      <span style="color: green;">Property Onboarding</span> → 
+      <span style="color: green;">Staging</span> → 
+      <span style="color: blue;">Buyer Interaction</span> → 
+      <span style="color: blue;">Sale Process</span>
     </div>
     <h2>Sale Process</h2>
     <form id="saleProcessForm">
-      <label for="finalPrice">Final Sale Price (in INR):</label>
-      <input type="number" id="finalPrice" name="finalPrice" required>
+      <label for="salePrice">Final Sale Price (in INR):</label>
+      <input type="number" id="salePrice" name="salePrice" placeholder="Enter final sale price" required>
 
-      <label for="saleDeed">Upload Sale Deed (URL):</label>
-      <input type="text" id="saleDeed" name="saleDeed" placeholder="Enter URL to Sale Deed" required>
+      <label for="paymentSchedule">Payment Schedule:</label>
+      <textarea id="paymentSchedule" name="paymentSchedule" placeholder="Outline the payment schedule (e.g., 30% on booking, 40% on agreement, 30% on registration)" required></textarea>
 
-      <label for="registration">Registration Details (e.g., Sub-Registrar details):</label>
-      <textarea id="registration" name="registration" required></textarea>
+      <label for="possessionDate">Possession Date:</label>
+      <input type="date" id="possessionDate" name="possessionDate" required>
 
-      <input type="submit" value="Complete Sale">
+      <label for="additionalConditions">Additional Conditions/Notes:</label>
+      <textarea id="additionalConditions" name="additionalConditions" placeholder="Enter any additional conditions agreed upon by both parties" required></textarea>
+      
+      <h3 class="step-title">Steps in the Sale Process:</h3>
+      <ul>
+        <li>
+          <strong>Draft the Sale Agreement:</strong>
+          <span class="instruction">Clearly outline the sale price, payment schedule, possession date, and any other conditions agreed upon by both parties.</span>
+        </li>
+        <li>
+          <strong>Execute the Final Sale Deed:</strong>
+          <span class="instruction">
+            The sale deed must be signed by both the seller and buyer in the presence of two witnesses.<br>
+            The deed must be registered at the local sub-registrar’s office; this involves paying stamp duty and registration fees.
+          </span>
+        </li>
+        <li>
+          <strong>Payment Processing:</strong>
+          <span class="instruction">Transfer of funds occurs as per the terms laid out in the sale agreement.</span>
+        </li>
+        <li>
+          <strong>Handover of Possession:</strong>
+          <span class="instruction">Once the sale deed is registered, hand over the keys, possession, and any relevant documents to the buyer.</span>
+        </li>
+        <li>
+          <strong>Mutation of Property:</strong>
+          <span class="instruction">Update the local municipal records to reflect the change in ownership for future property tax and utility billing.</span>
+        </li>
+      </ul>
+      
+      <input type="submit" value="Complete Sale Process">
     </form>
   </div>
   <script>
     document.getElementById('saleProcessForm').addEventListener('submit', function(e) {
       e.preventDefault();
+      // In a production environment, you'd handle form submission to a backend here.
+      localStorage.setItem('saleProcessComplete', 'true');
       alert('Sale process completed successfully!');
-      // Optionally, clear all stored data and restart the process
-      localStorage.clear();
-      window.location.href = 'seller-onboarding.html';
+      // Optionally, redirect to the landing page or a summary page.
+      window.location.href = 'index.html';
     });
   </script>
 </body>
