--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     * { box-sizing: border-box; }
     body {
       font-family: 'Roboto', sans-serif;
-      background: #f7f9fc;
+      background: #f5f5dc; /* beige */
       margin: 0;
       padding: 0;
       color: #333;
     }
     header {
-      background: #0052cc;
+      background: #FF8C00; /* deep orange */
       color: #fff;
       padding: 20px;
       text-align: center;
@@ -36,14 +36,14 @@
       margin-bottom: 30px;
     }
     .section h2 {
-      color: #0052cc;
+      color: #FF8C00;
       margin-bottom: 10px;
     }
     .segment {
       margin-bottom: 15px;
       padding: 10px;
-      border-left: 4px solid #0052cc;
-      background: #f0f4f8;
+      border-left: 4px solid #FF8C00;
+      background: #fff7e6; /* light orange/beige tint */
       border-radius: 4px;
     }
     .segment h3 {
@@ -57,7 +57,7 @@
     .btn {
       display: inline-block;
       padding: 10px 20px;
-      background: #0052cc;
+      background: #FF8C00;
       color: #fff;
       border-radius: 4px;
       text-decoration: none;
@@ -65,7 +65,7 @@
       transition: background 0.3s ease;
     }
     .btn:hover {
-      background: #003d99;
+      background: #e07b00;
     }
     .contact-referral {
       display: flex;
@@ -76,13 +76,14 @@
     .contact, .referral {
       flex: 1;
       min-width: 300px;
-      background: #f0f4f8;
+      background: #fff7e6;
       padding: 15px;
       border-radius: 4px;
     }
     .contact h3, .referral h3 {
       margin-top: 0;
       font-size: 1.1em;
+      color: #FF8C00;
     }
     .form-group {
       margin-bottom: 15px;
@@ -100,7 +101,7 @@
     }
     input[type="submit"] {
       padding: 10px 20px;
-      background: #0052cc;
+      background: #FF8C00;
       border: none;
       color: #fff;
       border-radius: 4px;
@@ -108,7 +109,7 @@
       transition: background 0.3s ease;
     }
     input[type="submit"]:hover {
-      background: #003d99;
+      background: #e07b00;
     }
     @media (max-width: 800px) {
       .container {
@@ -135,7 +136,7 @@
       </div>
       <div class="segment">
         <h3>Property Onboarding</h3>
-        <p>Provide your property details and upload necessary documents like title deed, encumbrance certificate, and more.</p>
+        <p>Provide your property details, Vastu details, and upload necessary documents like title deed, encumbrance certificate, etc.</p>
       </div>
       <div class="segment">
         <h3>Staging</h3>
