--- a/buyer-interaction.html
+++ b/buyer-interaction.html
@@ -8,13 +8,13 @@
     * { box-sizing: border-box; }
     body {
       font-family: 'Roboto', sans-serif;
-      background: #f7f9fc;
+      background: #f5f5dc;
       margin: 0;
       padding: 0;
       color: #333;
     }
     header {
-      background: #0052cc;
+      background: #FF8C00;
       color: #fff;
       padding: 20px;
       text-align: center;
@@ -30,13 +30,13 @@
       background: #fff;
       padding: 30px 40px;
       border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
     .progress {
       text-align: center;
       margin-bottom: 30px;
       font-weight: 500;
-      color: #0052cc;
+      color: #FF8C00;
     }
     .progress span {
       margin: 0 8px;
@@ -53,20 +53,21 @@
       vertical-align: middle;
     }
     table th {
-      background: #f0f4f8;
+      background: #fff7e6;
     }
     .action-btn {
       padding: 6px 10px;
-      background: #0052cc;
+      background: #FF8C00;
       color: #fff;
       border: none;
       border-radius: 4px;
       cursor: pointer;
       font-size: 0.9em;
+      margin-right: 10px;
       transition: background 0.3s ease;
     }
     .action-btn:hover {
-      background: #003d99;
+      background: #e07b00;
     }
     @media (max-width: 900px) {
       .container {
@@ -116,7 +117,7 @@
           <td>14:30</td>
           <td>Interested in quick closing</td>
           <td>
-            <button class="action-btn" onclick="alert('View/Respond to Queries for John Doe')">View/Respond</button>
+            <button class="action-btn" onclick="alert('Viewing/Responding to Queries for John Doe')">View/Respond</button>
           </td>
           <td>
             <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
@@ -130,7 +131,7 @@
           <td>10:00</td>
           <td>Wants property inspection first</td>
           <td>
-            <button class="action-btn" onclick="alert('View/Respond to Queries for Jane Smith')">View/Respond</button>
+            <button class="action-btn" onclick="alert('Viewing/Responding to Queries for Jane Smith')">View/Respond</button>
           </td>
           <td>
             <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
@@ -144,7 +145,7 @@
           <td>16:00</td>
           <td>Looking for negotiation on price</td>
           <td>
-            <button class="action-btn" onclick="alert('View/Respond to Queries for Alex Johnson')">View/Respond</button>
+            <button class="action-btn" onclick="alert('Viewing/Responding to Queries for Alex Johnson')">View/Respond</button>
           </td>
           <td>
             <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
