--- a/buyer-interaction.html
+++ b/buyer-interaction.html
@@ -25,57 +25,64 @@
       font-weight: 500;
     }
     .container {
-      max-width: 900px;
+      max-width: 1000px;
       margin: 40px auto;
       background: #fff;
-      padding: 30px 40px;
+      padding: 30px 20px;
       border-radius: 8px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
     .progress {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
       font-weight: 500;
       color: #FF8C00;
     }
     .progress span {
       margin: 0 8px;
     }
+    /* Responsive table container */
+    .table-responsive {
+      overflow-x: auto;
+      margin-bottom: 20px;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-bottom: 20px;
+      min-width: 900px;
     }
     table th, table td {
       border: 1px solid #ccc;
-      padding: 10px;
+      padding: 8px 10px;
       text-align: center;
       vertical-align: middle;
+      font-size: 0.9em;
     }
     table th {
       background: #fff7e6;
     }
     .action-btn {
-      padding: 6px 10px;
+      padding: 4px 8px;
       background: #FF8C00;
       color: #fff;
       border: none;
       border-radius: 4px;
       cursor: pointer;
-      font-size: 0.9em;
+      font-size: 0.8em;
       margin: 2px;
       transition: background 0.3s ease;
     }
     .action-btn:hover {
       background: #e07b00;
     }
-    @media (max-width: 900px) {
+    @media (max-width: 600px) {
       .container {
         margin: 20px;
         padding: 20px;
       }
       table th, table td {
-        font-size: 0.9em;
+        font-size: 0.8em;
+        padding: 6px 8px;
       }
     }
   </style>
@@ -92,87 +99,86 @@
       <span style="color: blue;">Buyer Interaction</span> → Sale Process
     </div>
     <h2>Buyer Interactions</h2>
-    
-    <!-- Buyer Details Table -->
-    <table id="buyerTable">
-      <thead>
-        <tr>
-          <th>Buyer Name</th>
-          <th>Mode of Financing</th>
-          <th># Queries Raised</th>
-          <th># Documents Acknowledged</th>
-          <th>Preferred Viewing Time</th>
-          <th>Additional Notes</th>
-          <th>View/Respond to Queries</th>
-          <th>Review Buyer MOU</th>
-          <th>Raise Query on Buyer MOU</th>
-          <th>Initiate Sale Process</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Sample Buyer Data -->
-        <tr>
-          <td>John Doe</td>
-          <td>Bank Loan</td>
-          <td>2</td>
-          <td>5</td>
-          <td>14:30</td>
-          <td>Interested in quick closing</td>
-          <td>
-            <button class="action-btn" onclick="alert('Viewing/Responding to Queries for John Doe')">View/Respond</button>
-          </td>
-          <td>
-            <button class="action-btn" onclick="alert('Reviewing Buyer MOU for John Doe')">Review MOU</button>
-          </td>
-          <td>
-            <button class="action-btn" onclick="alert('Raising Query on Buyer MOU for John Doe')">Raise Query</button>
-          </td>
-          <td>
-            <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
-          </td>
-        </tr>
-        <tr>
-          <td>Jane Smith</td>
-          <td>Self-financed</td>
-          <td>0</td>
-          <td>6</td>
-          <td>10:00</td>
-          <td>Wants property inspection first</td>
-          <td>
-            <button class="action-btn" onclick="alert('Viewing/Responding to Queries for Jane Smith')">View/Respond</button>
-          </td>
-          <td>
-            <button class="action-btn" onclick="alert('Reviewing Buyer MOU for Jane Smith')">Review MOU</button>
-          </td>
-          <td>
-            <button class="action-btn" onclick="alert('Raising Query on Buyer MOU for Jane Smith')">Raise Query</button>
-          </td>
-          <td>
-            <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
-          </td>
-        </tr>
-        <tr>
-          <td>Alex Johnson</td>
-          <td>Others</td>
-          <td>1</td>
-          <td>4</td>
-          <td>16:00</td>
-          <td>Looking for negotiation on price</td>
-          <td>
-            <button class="action-btn" onclick="alert('Viewing/Responding to Queries for Alex Johnson')">View/Respond</button>
-          </td>
-          <td>
-            <button class="action-btn" onclick="alert('Reviewing Buyer MOU for Alex Johnson')">Review MOU</button>
-          </td>
-          <td>
-            <button class="action-btn" onclick="alert('Raising Query on Buyer MOU for Alex Johnson')">Raise Query</button>
-          </td>
-          <td>
-            <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table id="buyerTable">
+        <thead>
+          <tr>
+            <th>Buyer Name</th>
+            <th>Mode of Financing</th>
+            <th># Queries Raised</th>
+            <th># Docs Acknowledged</th>
+            <th>Preferred Viewing Time</th>
+            <th>Additional Notes</th>
+            <th>View/Respond</th>
+            <th>Review MOU</th>
+            <th>Raise Query</th>
+            <th>Initiate Sale</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John Doe</td>
+            <td>Bank Loan</td>
+            <td>2</td>
+            <td>5</td>
+            <td>14:30</td>
+            <td>Quick closing</td>
+            <td>
+              <button class="action-btn" onclick="alert('Viewing/Responding for John Doe')">View/Respond</button>
+            </td>
+            <td>
+              <button class="action-btn" onclick="alert('Reviewing Buyer MOU for John Doe')">Review MOU</button>
+            </td>
+            <td>
+              <button class="action-btn" onclick="alert('Raising Query for John Doe')">Raise Query</button>
+            </td>
+            <td>
+              <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
+            </td>
+          </tr>
+          <tr>
+            <td>Jane Smith</td>
+            <td>Self-financed</td>
+            <td>0</td>
+            <td>6</td>
+            <td>10:00</td>
+            <td>Needs inspection</td>
+            <td>
+              <button class="action-btn" onclick="alert('Viewing/Responding for Jane Smith')">View/Respond</button>
+            </td>
+            <td>
+              <button class="action-btn" onclick="alert('Reviewing Buyer MOU for Jane Smith')">Review MOU</button>
+            </td>
+            <td>
+              <button class="action-btn" onclick="alert('Raising Query for Jane Smith')">Raise Query</button>
+            </td>
+            <td>
+              <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
+            </td>
+          </tr>
+          <tr>
+            <td>Alex Johnson</td>
+            <td>Others</td>
+            <td>1</td>
+            <td>4</td>
+            <td>16:00</td>
+            <td>Negotiation needed</td>
+            <td>
+              <button class="action-btn" onclick="alert('Viewing/Responding for Alex Johnson')">View/Respond</button>
+            </td>
+            <td>
+              <button class="action-btn" onclick="alert('Reviewing Buyer MOU for Alex Johnson')">Review MOU</button>
+            </td>
+            <td>
+              <button class="action-btn" onclick="alert('Raising Query for Alex Johnson')">Raise Query</button>
+            </td>
+            <td>
+              <button class="action-btn" onclick="window.location.href='sale-process.html'">Initiate Sale</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </body>
 </html>
